Added login controller, stubbed out
