# server/controllers/LoginService.js
@@ -1,0 +1,12 @@
+'use strict';
+
+exports.authenticateUser = function(args, res, next) {
+  /**
+   * Authenticates a user
+   *
+   * user info AuthRequest Credentials
+   * no response value expected for this operation
+   **/
+  res.end();
+}
+
